
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-4 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1191] Fixed issue where Namespace combo was conflicting with other DOM IDs in Lexicon Management
- Changed Accordion to Tabs in left menu
- In all Resource panels, Moved Page Settings back to right side, moved Template to top, moved Published to top right 
- [#MODX-1173] Added modResource->hasChildren() function. Returns # of children for the Resource.
- [#MODX-689] Fixed error when using @SELECT binding with Template Variable Input Option values.
- Fixed issues with modMenu creation/editing
- [#MODX-1132] Various fixes to the user editing page
- [#MODX-1123] Fixed bug where properties were not saving on new elements
- [#MODX-683] Changed title for 1st tab on Resource edit screen
- [#MODX-1118] Tweaked MODx.combo.ComboBox and other store references to possibly fix local store bug
- Fixed issue with Sort By dropdown in the Resource Tree
- Fixed issues with User Group update page
- Added modAccessPermission class to properly handle access policy permissions
- Adjusted UI to handle model change
- Added logic in setup install to clear sessions table after install to prevent access permission changing problems (and is a good general practice anyway); users will have to re-login after setup/ is run.
- Cleaned up access policy grid
- Default sort roles by authority
- Removed no-longer needed Security pages; now done in Access Control and User Group edit screens
- Started cleanup of Security system; changed 'Authority' listing on User Group page to a more correct "Minimum Role".
- Added some IDs to resource edit page
- [#MODX-1124] Took Templates off the list of attachable elements in Tools | Property Sets
